tests/parsing/smtlib/v2.7/errors/029_pattern_bad_argument_1.expected
File "tests/parsing/smtlib/v2.7/errors/029_pattern_bad_argument_1.smt2", line 3, character 44-50:
3 | (define-fun f ((x t)) t (match x ((A B) ((C lambda x) x))))
                                                ^^^^^^
Error while parsing arguments of a constructor in a pattern,
      read the reserved word 'lambda',
      but expected a symbol or '_' to bind the first constructor argument;
      note that keywords and reserved words (such as 'lambda', 'as', ...) are
      not symbols, and thus are not allowed here.
